Added Validator, Complete User CRUD
