# internal/identities/users/dtos/create_or_edit_user_dto.go
@@ -2,13 +2,13 @@ package dtos
 
 type CreateOrEditUserDto struct {
 	Id        int64   `json:"id"`
-	FirstName string  `json:"firstName"`
-	LastName  string  `json:"lastName"`
-	UserName  string  `json:"userName"`
-	Email     string  `json:"email"`
+	FirstName string  `json:"firstName" validate:"min=3,max=64,required"`
+	LastName  string  `json:"lastName" validate:"min=3,max=64,required"`
+	UserName  string  `json:"userName" validate:"min=8,max=256,required"`
+	Email     string  `json:"email" validate:"email,max=256,required"`
 	Password  string  `json:"password" copier:"-"`
 	RoleIds   []int64 `json:"roleIds"`
-}
+} // @name CreateOrEditUserDto
 
 type CreateUserDto struct {
 	*CreateOrEditUserDto
@@ -16,4 +16,4 @@ type CreateUserDto struct {
 
 type EditUserDto struct {
 	*CreateOrEditUserDto
-}
+} // @name EditUserDto
